DROOLS-733 - Unify Drools and jBPM execution servers - definition service resource, test for jbpm, general refactor of tests